Ajustado,agora salva as imagens e projetos

--- a/lambda/configuration/src/main/resources/bundle_es_ES.properties
+++ b/lambda/configuration/src/main/resources/bundle_es_ES.properties
@@ -309,3 +309,12 @@ ListInvoices=Facturas capturadas con exito.
 # Mensagens de eventos das remessas
 Collect=RECOGIDO
 InTransit=EN CARRO
+
+
+PostImage= Crear Imagen
+ListImage= Listar todas las Imágenes
+PutImage= Modificar Imagen
+Image= Imagen capturada con éxito
+ImageNotFound= Imagen no encontrada
+PostImagePic= Subir imagen
+DeleteImage= Eliminar Imagen
