--- a/lambda/configuration/src/main/resources/bundle_pt_BR.properties
+++ b/lambda/configuration/src/main/resources/bundle_pt_BR.properties
@@ -313,3 +313,12 @@ DestinatorCheck=CONFERIDO PELO destinatï¿½rio
 
 
 EXISTSTORLOC=Existe Storloc
+
+
+PostImage = Criar Imagem
+ListImage = Listar todas as Imagens
+PutImage = Modificar Imagem
+Image = Imagem capturada com sucesso
+ImageNotFound = Imagem não encontrada
+PostImagePic = Fazer upload da imagem
+DeleteImage = Excluir Imagem
